--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     name: kube-eventer
   name: kube-eventer
-  namespace: kube-system
+  namespace: shoot-myqqp82xbilq4122
 spec:
   replicas: 1
   selector:
@@ -18,15 +18,14 @@ spec:
         scheduler.alpha.kubernetes.io/critical-pod: ''
     spec:
       dnsPolicy: ClusterFirstWithHostNet
-      serviceAccount: kube-eventer
+      # serviceAccount: kube-eventer
       containers:
-        - image: registry.aliyuncs.com/acs/kube-eventer:v1.2.7-ca03be0-aliyun
+        - image: fevirtus/kube-eventer:latest
           name: kube-eventer
           command:
             - "/kube-eventer"
-            - "--source=kubernetes:https://kubernetes.default"
-            ## .e.g,dingtalk sink demo
-            - --sink=dingtalk:[your_webhook_url]&label=[your_cluster_id]&level=[Normal or Warning(default)]
+            - "--source=kubernetes:https://kubernetes.default?inClusterConfig=false&localKubeConfig=/etc/cloudprovider-bizflycloud/cloud-controller-manager.kubeconfig"
+            - --sink=rabbitmq:?host=10.3.93.150&port=5672&username=bke_staging&password=dmNjbG91ZDE&eventstopic=dblog&vhost=bke_staging
           env:
           # If TZ is assigned, set the TZ value as the time zone
           - name: TZ
@@ -38,6 +37,8 @@ spec:
             - name: zoneinfo
               mountPath: /usr/share/zoneinfo
               readOnly: true
+            - name: k8s-config
+              mountPath: /etc/cloudprovider-bizflycloud
           resources:
             requests:
               cpu: 100m
@@ -52,3 +53,6 @@ spec:
         - name: zoneinfo
           hostPath:
             path: /usr/share/zoneinfo
+        - name: k8s-config
+          configMap: 
+            name: cloudprovider-bizflycloud-config
